--- a/board.html
+++ b/board.html
@@ -1,1 +1,16 @@
-최초발행
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="keyword" content="HTML, meta, tag, element, reference">
+        <meta name="author" content="Sugar Paser">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+
+        <title>Sugar Paser</title>
+    </head>
+    <body>
+        <section>
+            <div>dkdksfi</div>
+        </section>
+    </body>
+</html>
