--- a/board.html
+++ b/board.html
@@ -8,8 +8,13 @@
 
         <title>Sugar Paser</title>
 
+        <!-- css -->
+        <link rel="stylesheet" href="common.css">
+        
         <!-- js -->
-        <script></script>
+        <script src="./js/jquery-3.7.1.min.js"></script>
+        <script src="./js/bagic.js"></script>
+
     </head>
     <body>
         <section>
