--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@
         <title>Sugar Paser</title>
 
         <!-- css -->
-        <link rel="stylesheet" href="common.css">
+        <link rel="stylesheet" href="./css/common.css">
         
         <!-- js -->
         <script src="./js/jquery-3.7.1.min.js"></script>
