--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@
         
         <!-- js -->
         <script src="./js/jquery-3.7.1.min.js"></script>
-        <script src="./js/bagic.js"></script>
+        <script src="./js/board.js"></script>
 
     </head>
     <body>
