--- a/board.html
+++ b/board.html
@@ -21,7 +21,7 @@
             <div class="notice_board">
                 <!-- title 열 -->
                 <ul class="board_row title_row">
-                    <li class="w70">번호</li>
+                    <li class="w70">1</li>
                     <li class="w500">제목</li>
                     <li class="w120">작성자</li>
                     <li class="w100">작성일</li>
