--- a/board.html
+++ b/board.html
@@ -28,6 +28,7 @@
                     <li class="w100">조회</li>
                     <li class="w100">좋아요</li>
                 </ul>
+                <ul class="board_text"></ul>
                 <!-- 게시글 추가로 들어오는 위치 -->
             </div>
 
