--- a/board.html
+++ b/board.html
@@ -17,6 +17,24 @@
 
     </head>
     <body>
-        
+        <!-- 게시판 전체 틀 -->
+        <div class="board_wrap">
+            <!-- 게시판 제목 -->
+            <div class="board_header"><h1>방명록</h1></div>
+
+            <!-- 게시판 내용 -->
+            <div class="board_body">
+                <input type="search" placeholder="검색어를 입력하세요">
+                    <a class="search" href="#">검색</a>
+                <div class="content-box"></div>
+                <div class="content-list"></div>
+                <ul class="number"></ul>
+            </div>
+
+            <!-- 글쓰기 -->
+            <div class="btn">
+                <a href="write.html">글쓰기</a>
+            </div>
+        </div>
     </body>
 </html>
