--- a/board.html
+++ b/board.html
@@ -26,8 +26,16 @@
             <div class="board_body">
                 <input type="search" placeholder="검색어를 입력하세요">
                     <a class="search" href="#">검색</a>
-                <div class="content-box"></div>
-                <div class="content-list"></div>
+                <div class="content-box">
+                    <div class="check"><input type="checkbox" name="" id=""></div>
+                    <div class="title"><a href="view.html"></a></div>
+                    <div class="delete"><button>X</button></div>
+                </div>
+                <div class="content-list">
+                    <div class="check"><input type="checkbox" name="" id=""></div>
+                    <div class="title"><a href="view.html"></a></div>
+                    <div class="delete"><button>X</button></div>
+                </div>
                 <ul class="number"></ul>
             </div>
 
